fix attempt to weird positioning on safari mobile

--- a/css/main-style.scss
+++ b/css/main-style.scss
@@ -19,13 +19,15 @@ span{
 
 #particles-js{
   position: absolute;
-  width: 100%;
-  height: 100%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
 }
 
 canvas {
   display: block;
-  vertical-align: bottom;
+  position: absolute;
 }
 
 html{
@@ -46,7 +48,7 @@ html{
   top: 0;
   position: fixed;
   border: 6px solid white;
-  margin: 20px;
+  margin: 0px;
   overflow-y: scroll;
 
   /*Grid*/
